[gd_scene load_steps=5 format=3 uid="uid://cqum8s71o23cy"]

[ext_resource type="Script" path="res://addons/explore-editor-theme/tabs/EditorConstants.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ds8c70l2dnpy8" path="res://addons/explore-editor-theme/ui/CodePreview.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c6mun6p3lk1k6" path="res://addons/explore-editor-theme/ui/FilterTool.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bg7phy5jdt0wl" path="res://addons/explore-editor-theme/ui/TypeTool.tscn" id="4"]

[node name="Constants" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Filter" parent="Layout/Toolbar" instance=ExtResource("3")]
layout_mode = 2
label_text = "Filter"

[node name="Type" parent="Layout/Toolbar" instance=ExtResource("4")]
layout_mode = 2

[node name="ConstantView" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConstantList" type="ItemList" parent="Layout/ConstantView"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConstantPanel" type="VBoxContainer" parent="Layout/ConstantView"]
visible = false
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="Padding0" type="Control" parent="Layout/ConstantView/ConstantPanel"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="ConstantName" type="Label" parent="Layout/ConstantView/ConstantPanel"]
layout_mode = 2
autowrap_mode = 1

[node name="Padding1" type="Control" parent="Layout/ConstantView/ConstantPanel"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="ConstantValue" type="Label" parent="Layout/ConstantView/ConstantPanel"]
layout_mode = 2

[node name="Padding2" type="Control" parent="Layout/ConstantView/ConstantPanel"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="ConstantCode" parent="Layout/ConstantView/ConstantPanel" instance=ExtResource("2")]
layout_mode = 2

[node name="EmptyPanel" type="Control" parent="Layout/ConstantView"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
